packages/uow-audit/main/default/objects/UoWEventPublishFailure__c/UoWEventPublishFailure__c.object-meta.xml
<CustomObject>
    <description>Tracks asynchronous platform event delivery failures detected via EventBus.EventPublishFailureCallback. Created when business events or audit events fail to deliver after commit. Provides admin visibility into silent delivery failures that synchronous publish results cannot detect.</description>
    <label>Event Publish Failure</label>
    <nameField>
        <displayFormat>EPF-{000000}</displayFormat>
        <label>Failure Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Event Publish Failures</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>