packages/uow-audit/main/default/objects/UoWEventPublishFailure__c/fields/AuditTransaction__c.field-meta.xml
<CustomField>
    <fullName>AuditTransaction__c</fullName>
    <description>Related audit transaction. For business event failures: the audit transaction that recorded the UoW execution. For audit event failures: the tombstone transaction created by the failure callback.</description>
    <label>Audit Transaction</label>
    <referenceTo>UoWAuditTransaction__c</referenceTo>
    <relationshipLabel>Event Publish Failures</relationshipLabel>
    <relationshipName>EventPublishFailures</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>