packages/uow-audit/main/default/objects/UoWEventPublishFailure__c/fields/AuditWorkItem__c.field-meta.xml
<CustomField>
    <fullName>AuditWorkItem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Audit Work Item</label>
    <referenceTo>UoWAuditWorkItem__c</referenceTo>
    <relationshipLabel>Event Publish Failures</relationshipLabel>
    <relationshipName>EventPublishFailures</relationshipName>
    <type>Lookup</type>
</CustomField>