packages/uow-audit/main/default/objects/UoWEventPublishFailure__c/fields/CorrelationId__c.field-meta.xml
<CustomField>
    <fullName>CorrelationId__c</fullName>
    <description>Correlation identifier linking related audit records across transactions.</description>
    <inlineHelpText>Correlation identifier linking related audit records across transactions.</inlineHelpText>
    <label>Correlation Id</label>
    <length>36</length>
    <type>Text</type>
</CustomField>