packages/uow-audit/main/default/objects/UoWEventPublishFailure__c/fields/ErrorMessage__c.field-meta.xml
<CustomField>
    <fullName>ErrorMessage__c</fullName>
    <description>Failure details and context</description>
    <inlineHelpText>Failure details and context</inlineHelpText>
    <label>Error Message</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>