packages/uow-audit/main/default/objects/UoWEventPublishFailure__c/fields/EventSObjectType__c.field-meta.xml
<CustomField>
    <fullName>EventSObjectType__c</fullName>
    <description>Platform event SObject type API name</description>
    <inlineHelpText>Platform event SObject type API name</inlineHelpText>
    <label>Event SObject Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>