packages/uow-audit/main/default/objects/UoWEventPublishFailure__c/fields/FailedAt__c.field-meta.xml
<CustomField>
    <fullName>FailedAt__c</fullName>
    <description>Timestamp when the failure callback executed</description>
    <inlineHelpText>Timestamp when the failure callback executed</inlineHelpText>
    <label>Failed At</label>
    <type>DateTime</type>
</CustomField>