packages/uow-audit/main/default/objects/UoWEventPublishFailure__c/fields/FailedEventCount__c.field-meta.xml
<CustomField>
    <fullName>FailedEventCount__c</fullName>
    <description>Number of events that failed to deliver</description>
    <inlineHelpText>Number of events that failed to deliver</inlineHelpText>
    <label>Failed Event Count</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>