packages/uow-audit/main/default/objects/UoWEventPublishFailure__c/fields/FailureSource__c.field-meta.xml
<CustomField>
    <fullName>FailureSource__c</fullName>
    <description>Source of the failure: BUSINESS_EVENT or AUDIT_EVENT</description>
    <inlineHelpText>Source of the failure: BUSINESS_EVENT or AUDIT_EVENT</inlineHelpText>
    <label>Failure Source</label>
    <length>30</length>
    <type>Text</type>
</CustomField>