packages/uow-audit/main/default/objects/UoWEventPublishFailure__c/fields/HasRelatedTransaction__c.field-meta.xml
<CustomField>
    <fullName>HasRelatedTransaction__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether the AuditTransaction lookup is populated</description>
    <inlineHelpText>Whether the AuditTransaction lookup is populated</inlineHelpText>
    <label>Has Related Transaction</label>
    <type>Checkbox</type>
</CustomField>