packages/uow-audit/main/default/objects/UoWEventPublishFailure__c/fields/PublishedEventCount__c.field-meta.xml
<CustomField>
    <fullName>PublishedEventCount__c</fullName>
    <description>Total events originally published</description>
    <inlineHelpText>Total events originally published</inlineHelpText>
    <label>Published Event Count</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>