packages/uow-audit/main/default/objects/UoWEventPublishFailure__c/fields/StorageMode__c.field-meta.xml
<CustomField>
    <fullName>StorageMode__c</fullName>
    <description>Audit storage mode for audit event failures</description>
    <inlineHelpText>Audit storage mode for audit event failures</inlineHelpText>
    <label>Storage Mode</label>
    <length>30</length>
    <type>Text</type>
</CustomField>