packages/uow-audit/main/default/objects/UoWEventPublishFailure__c/fields/TransactionId__c.field-meta.xml
<CustomField>
    <fullName>TransactionId__c</fullName>
    <description>Unique transaction identifier from the original UoW execution.</description>
    <inlineHelpText>Unique transaction identifier from the original UoW execution.</inlineHelpText>
    <label>Transaction Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>