packages/uow-audit/main/default/objects/UoWEventPublishFailure__c/fields/WorkId__c.field-meta.xml
<CustomField>
    <fullName>WorkId__c</fullName>
    <description>Work item identifier from the original UoW execution.</description>
    <inlineHelpText>Work item identifier from the original UoW execution.</inlineHelpText>
    <label>Work Id</label>
    <length>36</length>
    <type>Text</type>
</CustomField>